Correções e ajustes Bebidas

--- a/styles/output.css
+++ b/styles/output.css
@@ -710,6 +710,11 @@ video {
   margin-right: auto;
 }
 
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .mb-16 {
   margin-bottom: 4rem;
 }
@@ -883,6 +888,10 @@ video {
 
 .max-w-7xl {
   max-width: 80rem;
+}
+
+.max-w-7 {
+  max-width: 1.75rem;
 }
 
 .flex-shrink {
@@ -2103,6 +2112,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold {
