--- a/styles/output.css
+++ b/styles/output.css
@@ -2684,6 +2684,10 @@ body{
 }
 
 @media (min-width: 768px) {
+  .md\:min-w-\[600px\] {
+    min-width: 600px;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
